# Cadmium-AlternatingBitProtocol

./: CMakeLists.txt  README.md  README.txt  makefile
atomics/: receiver.hpp  receiverCadmium.hpp  sender.hpp  senderCadmium.hpp  subnet.hpp  subnetCadmium.hpp
data_structures/: message.cpp  message.hpp
test/: main_receiver_test.cpp  main_sender_test.cpp  main_subnet_test.cpp
top_model/: atomic_headers.hpp  logger_simulator_include.hpp  main.cpp
